<resources>
    <string name="app_name">カラフル単語帳</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">エラー</string>
    <string name="return1">戻る</string>
    <string name="close">閉じる</string>
    <string name="clear">クリア</string>
    <string name="confirm">確認</string>
    <string name="date_format">yyyy/MM/dd</string>
    <string name="date_format2">yyyy年MM月dd日</string>
    <string name="datetime_format">yyyy/MM/dd HH:mm</string>
    <string name="datetime_format2">yyyy年MM月dd日 HH:mm</string>
    <string name="time_area_1">今日</string>
    <string name="time_area_2">昨日</string>
    <string name="time_area_3">今週</string>
    <string name="time_area_4">今月</string>
    <string name="time_area_5">１ヶ月より前</string>
    <string name="app_title">カラフル単語帳</string>
    <string name="word_a">英語</string>
    <string name="word_b">日本語</string>
    <string name="hint_ab">ヒント 英 > 日</string>
    <string name="hint_ba">ヒント 日 > 英</string>
    <string name="comment">コメント</string>
    <string name="book_name">単語帳の名前</string>
    <string name="book_color">単語帳の色</string>
    <string name="card_color">カードの色</string>
    <string name="book_name2">単語帳名</string>
    <string name="where_card">場所</string>
    <string name="in_box">の中</string>
    <string name="word_a_top">英</string>
    <string name="word_b_top">日</string>
    <string name="name">名前</string>
    <string name="card">カード</string>
    <string name="book">単語帳</string>
    <string name="card_count">カード数</string>
    <string name="book_count">単語帳数</string>
    <string name="study_history">学習履歴</string>
    <string name="all_count">ぜんぶ</string>
    <string name="box_count_unit">冊</string>
    <string name="card_count_unit">枚</string>
    <string name="option">オプション</string>
    <string name="study_mode_1">１つづつ</string>
    <string name="study_mode_2">まとめて</string>
    <string name="study_mode_3">４択</string>
    <string name="study_mode_4">単語入力</string>
    <string name="study_type_1">英語 ➡︎ 日本語</string>
    <string name="study_type_2">日本語 ➡︎ 英語</string>
    <string name="study_order_1">単語帳の並び順</string>
    <string name="study_order_2">ランダム</string>
    <string name="study_filter_1">すべて</string>
    <string name="study_filter_2">覚えていないカード</string>
    <string name="know">知ってる</string>
    <string name="dont_know">知らない</string>
    <string name="count_not_learned">未収得</string>
    <string name="item_count">アイテム数</string>
    <string name="title_edit">単語帳を作る</string>
    <string name="title_study">学習する</string>
    <string name="title_study2">学習する単語帳を選択してください</string>
    <string name="title_studying">単語帳学習</string>
    <string name="title_studying_slide">単語帳学習 スライド</string>
    <string name="title_studying_select">単語帳学習 ４択</string>
    <string name="title_studying_input_correct">単語帳学習 正解入力</string>
    <string name="title_study_select">学習する</string>
    <string name="title_preset_book">プリセット単語帳</string>
    <string name="title_csv_book">CSV単語帳を選択</string>
    <string name="title_search_card">カードを探す</string>
    <string name="title_history">学習の記録</string>
    <string name="title_settings">設定</string>
    <string name="title_options">オプション</string>
    <string name="title_help">ヘルプ</string>
    <string name="search_card">カードを探す</string>
    <string name="search_card_name">検索カード名</string>
    <string name="title_debug">Debug</string>
    <string name="open">開く</string>
    <string name="edit">編集</string>
    <string name="delete">削除</string>
    <string name="study">学習する</string>
    <string name="clean_up">空にする</string>
    <string name="copy">コピー</string>
    <string name="trash">ゴミ箱</string>
    <string name="home">ホーム</string>
    <string name="favorite">お気に入り</string>
    <string name="learned">覚えた</string>
    <string name="return_to_home">元に戻す</string>
    <string name="studied_date">学習日時</string>
    <string name="last_studied_date">最終学習日時</string>
    <string name="last">最終学習日時</string>
    <string name="start">開始</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="history_book">学習記録</string>
    <string name="study_mode">出題モード</string>
    <string name="study_type">出題方法</string>
    <string name="study_type_exp">出題方法を設定します</string>
    <string name="skip">スキップ</string>
    <string name="study_order">出題順</string>
    <string name="study_order_exp">カードの出題順番を設定します</string>
    <string name="order_normal">通常</string>
    <string name="order_random">ランダム</string>
    <string name="study_filter">絞り込み</string>
    <string name="study_filter_exp">出題するカードの絞り込み方法を設定します</string>
    <string name="all">すべて</string>
    <string name="not_learned">未収得</string>
    <string name="finish">終了</string>
    <string name="cards_remain">あと%d枚</string>
    <string name="confirm_exit">学習を終了しますか？</string>
    <string name="confirm_copy_book">%s(単語帳)をコピーしますか？</string>
    <string name="confirm_moveto_trash">ゴミ箱に捨てますか？</string>
    <string name="confirm_cleanup_trash">ゴミ箱を空にしますか？</string>
    <string name="confirm_clear_history">学習記録をクリアしますか？</string>
    <string name="study_list_is_empty1">学習履歴がありません</string>
    <string name="confirm_export_csv">単語帳をcsvファイルに出力しますか？\n出力したファイルから単語帳を復元できます。</string>
    <string name="no_study_history">学習履歴がありません</string>
    <string name="retry1">"すべて\nリトライ"</string>
    <string name="retry2">"NGのみ\nリトライ"</string>
    <string name="title_result">"学習結果"</string>
    <string name="title_result2">"%sの学習結果"</string>
    <string name="backup">バックアップ</string>
    <string name="backup_auto">自動バックアップ</string>
    <string name="backup_xml">バックアップ(xml)</string>
    <string name="backup_and_restore">バックアップと復元</string>
    <string name="location">場所</string>
    <string name="backup_complete">バックアップが完了しました</string>
    <string name="backup_failed">バックアップに失敗しました</string>
    <string name="confirm_overwrite">バックアップが存在します。上書きしてもよろしいですか？</string>
    <string name="filename">ファイル名</string>
    <string name="backup_path_title1">手動バックアップ</string>
    <string name="backup_path_title2">自動バックアップ</string>
    <string name="datetime">日時</string>
    <string name="restore">復元</string>
    <string name="restore_from_file">XMLファイルから復元</string>
    <string name="confirm_backup">バックアップしますか？\nバックアップを行うと、以前の\n状態に戻せるようになります。\n
        また、別の端末に状態を移動することができます。</string>
    <string name="succeed_restore">復元に成功しました</string>
    <string name="failed_restore">復元に失敗しました</string>
    <string name="failed_backup">バックアップに失敗しました</string>
    <string name="finish_backup">バックアップが完了しました</string>
    <string name="failed_export">CSVファイルへの出力に失敗しました</string>
    <string name="failed_import">CSVファイルの読み込みに失敗しました</string>
    <string name="finish_export">への書き込みが完了しました</string>
    <string name="backup_not_found">バックアップファイルが見つかりませんでした。</string>
    <string name="confirm_restore">バックアップから復元しますか？\n復元を行うと現在の単語帳の情報は消去されます。</string>
    <string name="confirm_restore2">本当にバックアップから\n復元しますか？</string>
    <string name="confirm_cleanup">バックアップを空にしてもよろしいですか？</string>
    <string name="no_backup">バックアップはありません</string>
    <string name="finish_restore">復元が完了しました</string>
    <string name="confirm_add_book">%sを追加しますか？</string>
    <string name="confirm_add_book2">%sを追加しました</string>
    <string name="auto_backup">起動時に自動でバックアップする</string>
    <string name="license">ライセンス</string>
    <string name="contact_us">お問い合わせ</string>
    <string name="contact_message">ご要望、不具合の報告等は\nこちらからお願いします\n</string>
    <string name="send_mail">メールを送る</string>
    <string name="preset_title2">Addボタンをタップしてプリセットを\n追加します</string>
    <string name="csv_title2">指定のフォルダ(/sdcard/Documents/)\nにあるCSVファイルから単語帳を追加します。</string>
    <string name="add_item">追加</string>
    <string name="add_card">単語カード</string>
    <string name="add_book">単語帳</string>
    <string name="add_dummy_card">ダミー単語カード</string>
    <string name="add_dummy_book">ダミー単語帳</string>
    <string name="add_preset">プリセット単語帳</string>
    <string name="add_csv">CSVから追加</string>
    <string name="export">csv出力</string>
    <string name="sort">ソート</string>
    <string name="sort_word_asc">英語(A → Z)</string>
    <string name="sort_word_desc">英語(Z → A)</string>
    <string name="sort_time_asc">作成日(古い → 新しい)</string>
    <string name="sort_time_desc">作成日(新しい → 古い)</string>
    <string name="sort_none">ソート(元の並び)</string>
    <string name="sort_word_asc_2">ソート(A → Z)</string>
    <string name="sort_word_desc_2">ソート(Z → A)</string>
    <string name="sort_time_asc_2">ソート 作成日時(古い → 新しい)</string>
    <string name="sort_time_desc_2">ソート 作成日時(新しい → 古い)</string>
    <string name="sort_studied_time_asc">ソート 学習日時(古い → 新し い)</string>
    <string name="sort_studied_time_desc">ソート 学習日時(新しい → 古い)</string>
    <string name="disp_list">項目表示方法</string>
    <string name="list_type1">リスト</string>
    <string name="list_type_grid">グリッド</string>
    <string name="empty">空</string>
    <string name="debug">デバッグ</string>
    <string name="debug1">デバッグ1</string>
    <string name="debug2">デバッグ2</string>
    <string name="debug3">デバッグ3</string>
    <string name="debug4">デバッグ4</string>
    <string name="debug5">デバッグ5</string>
    <string name="debug6">デバッグ6</string>
    <string name="help">ヘルプ</string>
    <string name="disp_menu_name">メニュー名を表示</string>
    <string name="disp_menu_help">メニューの説明を表示</string>
    <string name="edit_page_word_type">カードの名前</string>
    <string name="select_csv_file">CSVファイルを選択</string>
    <string name="not_exit_study_card">学習できるカードがありません</string>
    <string name="help_add_item">カードや</string>
    <string name="contact_mail_title">アプリに関するお問い合わせ【カラフル単語帳】</string>
    <string name="contact_mail_body">アプリに対するご要望や不具合等の内容をお書きください\n\n\nアプリ名:カラフル単語帳\n</string>
    <string name="help_title_basic">基本</string>
    <string name="help_title_basic1">本アプリについて</string>
    <string name="help_title_basic2">使用方法</string>
    <string name="help_title_edit">単語帳の作成</string>
    <string name="help_title_edit0">単語帳の作成について</string>
    <string name="help_title_edit1">単語帳の作成</string>
    <string name="help_title_edit2">カードの作成</string>
    <string name="help_title_edit3">カード、単語帳の編集</string>
    <string name="help_title_edit4">カードの移動</string>
    <string name="help_title_edit5">カードをまとめて移動</string>
    <string name="help_title_edit6">カード、単語帳の削除</string>
    <string name="help_title_edit7">プリセット単語帳を追加</string>
    <string name="help_title_edit8">csv単語帳を追加</string>
    <string name="help_title_study">学習（単語を覚える）</string>
    <string name="help_title_study1">学習の流れ</string>
    <string name="help_title_study2">学習モード1（１つづつスライド）</string>
    <string name="help_title_study3">学習モード2（まとめてスライド）</string>
    <string name="help_title_study4">学習モード3（４択）</string>
    <string name="help_title_study5">学習モード4（正解を入力）</string>
    <string name="help_title_backup">バックアップ（保存と復元）</string>
    <string name="help_title_backup1">バックアップについて</string>
    <string name="help_title_backup2">環境をバックアップ</string>
    <string name="help_title_backup3">バックアップから復元</string>
    <string name="help_title_backup4">単語帳をバックアップ</string>
    <string name="title_options2">アプリの各種オプションを設定します</string>
    <string name="title_option_edit">単語帳編集</string>
    <string name="option_color_book">単語帳のデフォルト色</string>
    <string name="option_color_card">カードのデフォルト色</string>
    <string name="default_book_color_message">新しく作成した単語帳のデフォルト色です。\nお好きな色をタップしてください。</string>
    <string name="default_card_color_message">新しく作成したカードのデフォルト色です。\nお好きな色をタップしてください。</string>
    <string name="option_card_title">単語カードの表示</string>
    <string name="option_default_name_card">カードのデフォルト名</string>
    <string name="option_default_name_book">単語帳のデフォルト名</string>
    <string name="title_option_study">学習</string>
    <string name="option_add_ng_card">NGカードを自動追加</string>
    <string name="option_add_ng_card_msg">学習終了時にNGだったカードを自動でNG単語帳に追加するかどうか選んでください</string>
    <string name="option_mode3_1">４択モードの不正解カード抽出範囲</string>
    <string name="option_mode3_2">すべてのカード</string>
    <string name="option_mode3_3">学習中の単語帳のカード</string>
</resources>