<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_sort_none"
          android:title="@string/sort_none"
        />
    <item android:id="@+id/action_sort_word_asc"
          android:title="@string/sort_word_asc_2"
        />
    <item android:id="@+id/action_sort_word_desc"
          android:title="@string/sort_word_desc_2"
        />
    <item android:id="@+id/action_sort_time_asc"
          android:title="@string/sort_time_asc_2"
        />
    <item android:id="@+id/action_sort_time_desc"
          android:title="@string/sort_time_desc_2"
        />
    <item android:id="@+id/action_sort_studied_time_asc"
          android:title="@string/sort_studied_time_asc"
        />
    <item android:id="@+id/action_sort_studied_time_desc"
          android:title="@string/sort_studied_time_desc"
        />

</menu>