<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="20dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/editName"/>

    <TextView
        android:text="@string/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/editComment"/>


    <TextView
        android:text="@string/book_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"/>

    <com.sunsunsoft.shutaro.tangobook.ColorView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/current_color"
        bg_color="#ff0000"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >
        <com.sunsunsoft.shutaro.tangobook.ColorView
            android:layout_width="50dp"
            android:layout_height="50dp"
            bg_color="#ff0000"
            android:id="@+id/color_red"
            />
        <com.sunsunsoft.shutaro.tangobook.ColorView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/color_limegreen"
            bg_color="#32CD32"
            />
        <com.sunsunsoft.shutaro.tangobook.ColorView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/color_blue"
            bg_color="#0000ff"
            />
        <com.sunsunsoft.shutaro.tangobook.ColorView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/color_orange"
            bg_color="#FFA500"
            />
        <com.sunsunsoft.shutaro.tangobook.ColorView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/color_darkviolet"
            bg_color="#9400D3"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:text="OK"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOK"/>
        <Button
            android:text="Cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancel"
            android:background="@drawable/cancel_button_state"
            android:textColor="@android:color/background_light"/>

    </LinearLayout>

    <!-- for debug -->
    <Button
        android:text="Random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRandom"
        />

</LinearLayout>